syntax = "proto3";

package auth.v1;

option go_package = "dnsarc/gen/auth/v1;authv1";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc WhoAmI(WhoAmIRequest) returns (WhoAmIResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message User {
  string id = 1;
  string email = 2;
  string avatar = 3;
  string created_at = 4;
  string updated_at = 5;
}

message RegisterResponse {
  User user = 1;
  string access_token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
}

message WhoAmIRequest {}

message WhoAmIResponse {
  User user = 1;
}
